# langcode

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  STEP1.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ANALYSIS.md  DECISIONS.md  DESIGN.md  IMPLEMENTATION_PLAN.md
docs/REFERENCES/: DEPENDENCIES.md  PROMPTS.md  TOOLS.md
src/langcode/: __main__.py  global_config.py  installation.py
src/langcode/auth/: __init__.py  auth.py
src/langcode/config/: __init__.py  config.py  flag.py  globals.py  markdown.py  paths.py  tui.py  tui_schema.py
src/langcode/flag/: __init__.py
src/langcode/storage/: __init__.py  db.py  schema_sql.py  storage.py
src/langcode/util/: error.py  filesystem.py  git.py  glob.py  lazy.py  lock.py  log.py  merge.py
tests/: conftest.py  test_sanity.py
tests/unit/: test_config.py  test_storage_db.py  test_storage_storage.py  test_util.py
