[project]
name = "langcode"
version = "0.1.0"
description = "LangCode - AI coding assistant"
readme = "README.md"
authors = [
    { name = "avolxn", email = "vladislav.eldashov@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # AI Framework
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=0.1.0",
    # CLI & Output
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    # Web Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    # Schema Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # File Operations
    "aiofiles>=23.2.0",
    "watchdog>=4.0.0",
    # Text Processing
    "python-frontmatter>=1.1.0",
    "html2text>=2024.2.26",
    "strip-ansi>=0.1.1",
    # Configuration
    "platformdirs>=4.1.0",
    "tomli-w>=1.0.0",
    # HTTP Client
    "httpx>=0.26.0",
    # MCP & LSP
    "mcp>=0.1.0",
    "pygls>=1.3.0",
    # Tree-sitter
    "tree-sitter>=0.21.0",
    "tree-sitter-bash>=0.21.0",
    # OAuth & Auth
    "authlib>=1.3.0",
    "google-auth>=2.27.0",
    # Utilities
    "python-ulid>=2.2.0",
    "pyperclip>=1.8.2",
    "rapidfuzz>=3.6.0",
    "pathspec>=0.12.0",
    "wcmatch>=8.5.0",
    "ptyprocess>=0.7.0",
]

[project.scripts]
langcode = "langcode.__main__:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP", "S", "C4", "Q", "PTH", "ASYNC"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
